# cpp-programming-course

./: .gitignore  README.md
homework-01/: README.md
homework-01/Lesson1/: Lesson1.pro  main.cpp
homework-02/: README.md
homework-02/Lesson2/: Lesson2.pro  bigdata.cpp  bigdata.h  main.cpp
homework-03/: README.md
homework-03/Lesson3/: Lesson3.pro  filemanager.cpp  filemanager.h  main.cpp  sensor.cpp  sensor.h
homework-04/: README.md
homework-04/Lesson4/: Lesson4.pro  main.cpp  order.cpp  order.h
homework-05/: README.md
homework-05/Lesson5/: Lesson5.pro  SafeBank.h  main.cpp  unsafe.cpp  unsafe.h
homework-07_cinema-uml-project/: README.md
homework-07_cinema-uml-project/docs/: specifications.md
homework-08/: README.md
homework-08/MathCalculator/: MathCalculator.pro  main.cpp
homework-08/MathLib/: MathLib.cpp  MathLib.h  MathLib.pro
homework-10/FileAnalyzer/: CMakeLists.txt
homework-10/FileAnalyzer/resources/: resources.qrc
homework-10/FileAnalyzer/scr/: file_item.cpp  file_item.h  file_scanner.cpp  file_scanner.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
homework-10/docs/: README.md
